--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
   <h1>Download ZIP File</h1>
   <p>Click the button below to download the folder:</p>
-  <a href="assets/my-folder.zip" download>
+  <a href="BUILDEDTBS2.zip" download>
     <button class="download-btn">Download ZIP</button>
   </a>
 </body>
