--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-  <h1>Download ZIP File</h1>
+  <h1>Download TBS File</h1>
   <p>Click the button below to download the folder:</p>
   <a href="BUILDEDTBS2.zip" download>
     <button class="download-btn">Download ZIP</button>
