--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
   <a href="BUILDEDTBS2.zip" download>
     <button class="download-btn">Download ZIP</button>
   </a>
+  <p>- Extract the .zip file and start "Bakery Simulator.exe"</p>
 </body>
 </html>
